# ai-agent-blueprint

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  ci-checks.json  docker-compose.yml  env.example  pyproject.toml  vulture_whitelist.py
.gitea/workflows/: ci-ui.yml  ci.yml
.github/workflows/: ci.yml
docs/: SYSTEM_OVERVIEW.md
docs/lessons-learned/: README.md  TEMPLATE.md
k8s/: README.md  api.yml  configmap.yml  ingress.yml  migrations.yml  namespace.yml  postgres.yml  redis.yml  secrets.yml  worker.yml
migrations/: README  env.py
scripts/: check_code_health.py  check_migration_heads.py  check_ui_code_health.sh  ci_check_local.py  quality_delta.py
skills/commit/: SKILL.md
skills/database-operations/: SKILL.md
skills/local-development/: SKILL.md
src/app/agent/: __init__.py  example_tools.py  facade.py  interceptors.py  streaming.py  tools.py
src/app/agent/adapters/: __init__.py  base.py  loader.py
src/app/agent/adapters/agno/: __init__.py  adapter.py
src/app/api/: main.py
src/app/api/auth/: dev_provider.py  factory.py  google_provider.py  jwt.py  protocol.py
src/app/api/core/: exceptions.py  schemas.py
src/app/api/middleware/: auth.py
src/app/api/routes/: auth.py  chat.py  health.py
src/app/core/: config.py  exceptions.py
src/app/core/database/: base.py  engine.py  unit_of_work.py
src/app/core/models/: user.py
src/app/core/repositories/: base.py  user.py
src/app/core/task_queue/: interface.py
src/app/worker/: config.py  cron.py  settings.py
src/app/worker/tasks/: __init__.py  example.py
tests/: conftest.py  test_example.py
ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/features/auth/: AuthGuard.tsx  LoginPage.tsx  useAuth.ts
ui/src/features/chat/: ChatInput.tsx  ChatPage.tsx  MessageList.tsx  useChat.ts  useChatStore.ts
ui/src/shared/components/ui/: Button.tsx  Input.tsx  Layout.tsx
ui/src/shared/services/: api.ts
ui/src/shared/stores/: useAppStore.ts
ui/src/types/: index.ts
