[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-blueprint"
dynamic = ["version"]
description = "FastAPI + React blueprint for AI agent applications"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Chuck Conway", email = "charles@cconway.com" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "saq>=0.22.0",
    "redis>=5.2.0",
    "agno>=1.0.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "google-genai>=1.5.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "import-linter>=2.1",
    "radon>=6.0.1",
    "vulture>=2.14",
    "deptry>=0.21.0",
    "factory-boy>=3.3.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools-scm]
version_file = "src/app/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "S", "C901", "UP", "ANN", "D"]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary on second line (conflicts with D212)
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN401", # Dynamically typed expressions (typing.Any) disallowed
    "S101",   # Use of assert detected (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D"]
"migrations/**/*.py" = ["E501", "ANN"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "scripts/", "tests/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require database, Redis, etc.)",
    "e2e: End-to-end tests (full stack)",
    "slow: Tests that take a long time to run",
]

# ---------------------------------------------------------------------------
# Import Linter
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Core independence"
type = "forbidden"
source_modules = ["app.core"]
forbidden_modules = ["app.api", "app.agent"]

[[tool.importlinter.contracts]]
name = "Agent independence"
type = "forbidden"
source_modules = ["app.agent"]
forbidden_modules = ["app.api"]

[[tool.importlinter.contracts]]
name = "Worker independence"
type = "forbidden"
source_modules = ["app.worker"]
forbidden_modules = ["app.api"]

# ---------------------------------------------------------------------------
# Deptry
# ---------------------------------------------------------------------------
[tool.deptry]
ignore = ["DEP002"]

[tool.deptry.per_rule]
DEP002 = { ignore = ["asyncpg", "uvicorn"] }

# ---------------------------------------------------------------------------
# Vulture
# ---------------------------------------------------------------------------
[tool.vulture]
min_confidence = 80
exclude = ["tests/", "migrations/"]
